Fix free and non-free widgets styles with a css class to aboid the hard code style.position and style.overflow, add Progressbar to widget gallery, fix widgets on window.w on attach new widgets into the application

--- a/src/ui/styles/main.css
+++ b/src/ui/styles/main.css
@@ -45,6 +45,11 @@ a:hover {
     display: block;
 }
 
+.WUINonFreePosition {
+    position: absolute !important;
+    overflow: hidden !important;
+}
+
 .cssCustom {
     margin-top: 10px;
     margin-bottom: 10px;
